[metadata]
name = python-outreach
version = 0.1.0
description = Python-outreach is a Python wrapper functions for Outreach APIs
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = RedHat Marketing Operations Data Engineering
author_email = mkt-ops-de@redhat.com,
license = MIT
url = https://github.com/ptoraskar/python-outreach.git

[options]
packages = python_outreach
platforms = any
include_package_data = True
install_requires =
    backoff>=1.8.0
    requests>=2.26.0
    argparse>=1.4.0
    singer-python>=5.12.2
    python-dotenv>=0.19.0
    virtualenv-api>=2.1.18,<3.0.0
    virtualenv>=20.4.7,<21.0.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    dude = python-outreach=python_outreach:main

[options.extras_require]
test =
    coverage[toml]
    pylint
    pytest >= 6.2.2
    pytest-cov
all =
    %(test)s